--- a/DocspiderTesteUploadDownload/Presentation.DocspiderTesteUploadDownload/Presentation.DocspiderTesteUploadDownload.csproj
+++ b/DocspiderTesteUploadDownload/Presentation.DocspiderTesteUploadDownload/Presentation.DocspiderTesteUploadDownload.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\Infra.Data\Infra.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Imagens\" />
+  </ItemGroup>
+
 </Project>
